# meus-codigos

exercicios-beecrowd/: corrida  domino3046.c  fatorialsimples1153.c  feijao2791.c  identificandocha2006.c  mcpronalts1985.c  pericles  quadra  saida  saidaseis2752.c  saldovovo2434.c  sequenciasecreta3048.c  tacografo2388.c  test  teste
exercicios-beecrowd/iniciante/: avioes2339.c  bobconduite1589.c  carta  cartaCriptografada2502.c  corrida2416.c  divisoresi1157.c  evento2172.c  fatorialsimples1153.c  gangorra2455.c  notaesquecida3055.c  notasdaprova2344.c  pericles2061.c  quadradocubo1143.c  quantamandioca2936.c  saida2756.c  seqlogica1144.c  topn1943.c  triangulospoligonos2058.c  tridu1933.c
exercicios-beecrowd/paradigmas/: fibo  fibonaccichamadas1029.c  hanoi1166.c
visualizadorAlgoritmos/: CMakeLists.txt  README.md
visualizadorAlgoritmos/include/: context.h  logic.h  render.h  utils.h
visualizadorAlgoritmos/src/: context.c  logic.c  main.c  render.c  utils.c
